added functionality to use env variables from .env file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,36 @@
+attrs==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+distlib==0.3.9
+docopt==0.6.2
+filelock==3.17.0
+idna==3.10
+iniconfig==2.0.0
+jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+packaging==24.2
+paho-mqtt==1.6.1
+pbr==6.1.1
+platformdirs==4.3.6
+pluggy==1.5.0
+PyJWT==2.10.1
+pykwalify==1.8.0
 pytest==7.2.1
+python-box==6.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.22.3
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+setuptools==75.8.0
+six==1.17.0
+stevedore==4.1.1
 tavern==2.11.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+virtualenv==20.29.1
